Fixed games button text alignment

--- a/assets/css/common/profile-mode.css
+++ b/assets/css/common/profile-mode.css
@@ -87,12 +87,12 @@
 
 .button-inner {
     display: flex;
+    width: fit-content;
+    margin: auto;
     justify-content: center;
     padding: 0 8px;
     font-weight: 600 !important;
     color: var(--tertiary);
-    /* padding: none !important;
-    background-color: transparent !important; */
 }
 
 .button-inner svg {
